Code review: Add body "overflow-x: hidden;", in order to avoid horizontal scrolling on slide page transition.

--- a/www/style.css
+++ b/www/style.css
@@ -4,6 +4,7 @@
 body {
 	font: 1em sans-serif;
 	line-height: 1.3;
+	overflow-x: hidden;
 	margin: 0;
 	padding: 0;
 }
